parcial-patrones-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: parcial-patrones
  name: parcial-patrones
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parcial-patrones
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: parcial-patrones
    spec:
      containers:
      - image: camilonavarro/parcial-patrones:1.0.0
        name: parcial-patrones
        ports:
        - containerPort: 8080
        resources: 
          requests:
            cpu: "150m"
            memory: "300Mi"
          limits:
            cpu: "600m"
            memory: "1Gi"
        startupProbe:
          httpGet:
            path: /api/mensajes
            port: 8080
          initialDelaySeconds: 30
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /api/mensajes
            port: 8080
          initialDelaySeconds: 30
          failureThreshold: 2
        readinessProbe:
