h2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2-service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 8082
      targetPort: 8082
      protocol: TCP
      name: h2-console
  selector:
    app: api-rest
