parcial-patrones-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: parcial-patrones
  name: parcial-patrones
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: parcial-patrones    
  type: ClusterIP
