parcial-patrones-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: parcial-patrones
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: parcial-patrones
            port:
              number: 80
        path: /patrones(/|$)(.*)
        pathType: ImplementationSpecific
